JWT Token added

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
 MONGODB_URL=mongodb+srv://brayshadow1:Sourav123@cluster0.9rs4ywj.mongodb.net/
 MONGODB_URL_LOCAL=mongodb://localhost:27017/hotels
+JWT_SECRET=12345
